Add missing documentation
